--- a/src/styles.css
+++ b/src/styles.css
@@ -1,61 +1,373 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #dce4d8;
-    display:grid;
-    grid-template-columns: repeat(12, 1fr); /* Create 12 equal columns */
-    grid-template-rows: auto;
-  }
+  font-family: Markazi;
+  background-color: #ffffff;
+  margin: 0; 
+  padding: 0; 
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
+}
 
-  /*.header {
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    background-color: #f0eeee; 
-    padding: 10px; 
-  }*/
-
- 
 .nav {
-    background-color: #8da586;
-    font-size: small;
-    padding: 10px 0;
-    display: grid;
-    grid-template-columns: repeat(7, 100vw);
-    gap: 10px; /* Adjust the gap between items */
-    justify-items: center; /* Center the items horizontally */
-    align-items: center; /* Center the items vertically */
-  }
+  background-color: #ffffff;
+  font-size: large;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  justify-content: center;
+  gap: 5vw;
   
-  /* Style the navigation links */
-  .nav ul {
-    list-style: none;
-    padding: 0;
-    display: flex; /* Use flexbox to center the links horizontally */
-    justify-content: center; /* Center the links horizontally within the flex container */
-    align-items: center; /* Center the links vertically within the flex container */
-    gap: 3vw; /* Adjust the gap between links */
-  }
-  
-  .nav ul li a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-  }
-  
-  
-  .main {
-    
+}
+
+.nav ul {
+  list-style: none;
+  padding: 10;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 5vw;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+
+.main {
+  padding: 20px;
+}
+
+.nav ul li a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  transition: color 0.2s; 
+}
+
+.nav ul li a:hover {
+  color: #F4CE14; 
+}
+
+.footer {
+  background-color: #d4ddd1;
+  padding: 10px;
+  grid-column: 1 / -1; 
+}
+
+/* Hero */
+
+.hero {
+  background-color: #495E57;
+  width:95vw;
+  border: 15px ;
+  padding: 50px;
+  margin: 0px;
+  border-radius: 16px;
+  color: #F4CE14;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 20px;
+}
+
+.hero p{
+  color:#f6f6f6
+}
+
+.text {
+  text-align: left;
+  font-size: 1.5vw;
+  font-weight: 700;
+  margin-bottom: 2vw;
+}
+
+
+.cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #F4CE14;
+  color: #000000;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 16px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #bdc5ae;
+}
+
+.hero-image {
+  text-align: right;
+  padding: 10px;
   }
 
-  .footer {
-    
-    background-color: #8da586; /* Add a background color for the footer */
-    padding: 10px; /* Add padding for spacing */
-   
-  }
+.hero-image img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 16px;
+}
 
-/*More Components*/
+/* specials */
 
-.home{
-  
+.menu-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #F4CE14;
+  color: #000000;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 16px;
+  transition: background-color 0.3s;
+}
+
+.menu-button:hover {
+  background-color: #bdc5ae;
+}
+
+
+.special-items-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px; 
+}
+
+.greeksalad{
+  background-color: #495E57;
+  width:25vw;
+  height: 65vh;
+  border: 16px ;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 16px;
+  color: #F4CE14;
+}
+
+.greeksalad p{
+  color: white;
+}
+
+.greeksalad img {
+  max-width: 25vw;
+  height: auto;
+  border-radius: 16px;
+}
+
+.kosh{
+  background-color: #495E57;
+  width:25vw;
+  height: 65vh;
+  border: 16px ;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 16px;
+  color: #F4CE14;
+}
+
+.kosh p{
+  color: white;
+}
+
+.kosh img {
+  max-width: 25vw;
+  height: auto;
+  border-radius: 16px;
+}
+
+.meatballs{
+  background-color: #495E57;
+  width:25vw;
+  height: 65vh;
+  border: 16px ;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 16px;
+  color: #F4CE14;
+}
+
+.meatballs p{
+  color: white;
+}
+
+.meatballs img {
+  max-width: 25vw;
+  height: auto;
+  border-radius: 16px;
+}
+
+/* testimonials */
+.cardcont{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 10px; 
+}
+
+.p1 {
+  background-color: #ffffff; 
+  border: 1px solid #ccc; 
+  border-radius: 10px; 
+  padding: 20px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  width: 15vw;
+  height: 20vw; 
+  margin: 10px; 
+}
+
+.p1 h2 {
+  font-size: 18px; 
+  color: #FFD700; 
+  margin: 0;
+}
+
+.p1 img {
+  max-width: 100%; 
+  height: auto;
+  margin-top: 10px; 
+}
+
+.p1 p {
+  margin: 0; 
+  line-height: 1.4; 
+}
+
+.p2 {
+  background-color: #ffffff; 
+  border: 1px solid #ccc; 
+  border-radius: 10px; 
+  padding: 20px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  width: 15vw;
+  height: 20vw;  
+  margin: 10px; 
+}
+
+.p2 h2 {
+  font-size: 18px; 
+  color: #FFD700; 
+  margin: 0;
+}
+
+.p2 img {
+  max-width: 100%; 
+  height: auto;
+  margin-top: 10px; 
+}
+
+.p2 p {
+  margin: 0; 
+  line-height: 1.4; 
+}
+
+.p3 {
+  background-color: #ffffff; 
+  border: 1px solid #ccc; 
+  border-radius: 10px; 
+  padding: 20px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  width: 15vw;
+  height: 20vw;  
+  margin: 10px; 
+}
+
+.p3 h2 {
+  font-size: 18px; 
+  color: #FFD700; 
+  margin: 0;
+}
+
+.p3 img {
+  max-width: 100%; 
+  height: auto;
+  margin-top: 10px; 
+}
+
+.p3 p {
+  margin: 0; 
+  line-height: 1.4; 
+}
+
+.p4 {
+  background-color: #ffffff; 
+  border: 1px solid #ccc; 
+  border-radius: 10px; 
+  padding: 20px; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+  width: 15vw;
+  height: 20vw;  
+  margin: 10px; 
+}
+
+.p4 h2 {
+  font-size: 18px; 
+  color: #FFD700; 
+  margin: 0;
+}
+
+.p4 img {
+  max-width: 100%; 
+  height: auto;
+  margin-top: 10px; 
+}
+
+.p4 p {
+  margin: 0; 
+  line-height: 1.4; 
+}
+
+/* Booking page */
+.bookingform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.bookingform h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+form {
+  display: grid;
+  max-width: 300px;
+  gap: 20px;
+  padding:3rem;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+label {
+  font-weight: bold;
+}
+
+input[type="date"],
+select,
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #F4CE14;
+  color: #000000;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.bookbutton:hover {
+  background-color: #bdc5ae;
 }
